# cwru_vision

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  package.xml
cwru_opencv_common/: CMakeLists.txt  README.md  package.xml
cwru_opencv_common/include/cwru_opencv_common/: block_detection.h  circle_detection.h  color_model.hpp  cv_rotations.h  ellipse_modeling.h  ellipse_modeling_numerical.h  grab_cut.h  manual_labeling.h  opencv_geometry_2d.h  opencv_geometry_3d.h  opencv_local.h  opencv_ui.h  projective_geometry.h
cwru_opencv_common/include/cwru_opencv_common/color_model.hpp/: *
cwru_opencv_common/node/: manual_labeling_node.cpp
cwru_opencv_common/src/: block_detection.cpp  circle_detection.cpp  color_model.cpp  cv_rotations.cpp  ellipse_modeling.cpp  ellipse_modeling_numerical.cpp  grab_cut.cpp  manual_labeling.cpp  opencv_geometry_2d.cpp  opencv_geometry_3d.cpp  opencv_local.cpp  projective_geometry.cpp
cwru_opencv_common/srv/: image_label.srv
cwru_opencv_common/test/: gtest_cv_rotations.cpp  gtest_ellipse_matching.cpp  gtest_manual_labeling.cpp  gtest_point_array_projection.cpp  rostest_ellipse_matching.test  rostest_manual_labeling.cpp  rostest_manual_labeling.test  test_ellipse.cpp
cwru_opencv_common/test/test_images/: test_4_comb_2016-02-01-135224-0000.raw
cwru_pcl_utils/: CMakeLists.txt
visual_patterns/: .gitignore  CircleGrid.tex  ColorCircleGrid.tex  chess_grid_bw.tex  circle_grid_bw.tex  planarGeometry.tex  planarGeometry20mm.tex
